--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,28 @@
   
   <title>Manage landing page</title>
 </head>
-<body>
-  <header class="max-w-6xl m-auto">
-    <nav class="flex items-center justify-between py-12">
+<body class="overflow-x-hidden">
+  <header class="max-w-6xl m-auto px-4">
+    <nav class="flex items-center justify-between pt-6">
       <img src="./images/logo.svg" alt="logo">
-      <ul class="flex gap-4">
+      <ul class="gap-4 hidden md:flex">
         <li><a href="/">Pricing</a></li>
         <li><a href="/">Product</a></li>
         <li><a href="/">About Us</a></li>
         <li><a href="/">Careers</a></li>
         <li><a href="/">Community</a></li>
       </ul>
-      <button class="bg-orange-600 py-3 px-8 rounded-full mt-8 font-bold text-white">Get Started</button>
-      <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="lg:hidden">
+      <button class="bg-orange-600 py-3 px-8 rounded-full font-bold text-white hidden md:block">Get Started</button>
+      <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="md:hidden">
     </nav>
   </header>
   
-  <main>
-    <section class="max-w-6xl m-auto flex items-center">
-      <div>
-        <h1 class="text-6xl font-black mb-6">Bring everyone together to build better products.</h1>
-        <p class="w-7/12">
+  <main class="mt-12 md:mt-28 text-center md:text-left">
+    <section class="max-w-sm md:max-w-6xl m-auto flex items-center relative flex-col-reverse md:flex-row">
+      <img src="./images/bg-tablet-pattern.svg" alt="" class="absolute -z-10 top-[-26%] right-[-28%] md:top-[-67%] md:right-[-23%]">
+      <div class="text-center md:text-left">
+        <h1 class="text-4xl md:text-6xl font-black mb-6">Bring everyone together to build better products.</h1>
+        <p class="md:w-7/12 px-2">
           Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.
         </p>
         <button class="bg-orange-600 py-3 px-8 rounded-full mt-8 font-bold text-white">Get Started</button>
@@ -37,80 +38,78 @@
       <img src="./images/illustration-intro.svg" alt="">
     </section>
 
-    <section class="max-w-6xl m-auto grid grid-cols-2 mt-12">
-      <div class="w-9/12">
+    <section class="max-w-sm md:max-w-6xl m-auto grid md:grid-cols-2 mt-28">
+      <div class="md:w-9/12 m-auto md:m-0">
         <h2 class="text-4xl font-bold mb-8">What’s different about Manage?</h2>
-        <p class="w-8/12">Manage provides all the functionality your team needs, without 
+        <p class="md:w-9/12 mb-12">Manage provides all the functionality your team needs, without 
           the complexity. Our software is tailor-made for modern digital 
           product teams. </p>
       </div>
 
-      <div>
-        <div class="flex items-start gap-4">
-          <p class="bg-orange-600 px-6 py-1 rounded-full text-white">01</p>
-          <div>
-            <p class="font-bold mb-4">Track company-wide progress</p>
-            <p class="w-10/12">
-              See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.
-            </p>
+      <div class="px-3">
+        <div>
+          <div class="flex items-center bg-orange-100 md:bg-white rounded-l-full gap-5">
+            <p class="bg-orange-600 px-6 py-1 rounded-full text-white">01</p>
+            <p class="font-bold">Track company-wide progress</p>
           </div>
+          <p class="md:w-10/12 md:ml-[5.5rem] text-left my-6">
+            See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.
+          </p>
         </div>
-        <div class="flex items-start gap-4 mt-8">
-          <p class="bg-orange-600 px-6 py-1 rounded-full text-white">02</p>
-          <div>
-            <p class="font-bold mb-4">Advanced built-in reports</p>
-            <p class="w-10/12">
-              Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
-            </p>
+
+        <div>
+          <div class="flex items-center bg-orange-100 md:bg-white rounded-l-full gap-5">
+            <p class="bg-orange-600 px-6 py-1 rounded-full text-white">02</p>
+            <p class="font-bold">Advanced built-in reports</p>
           </div>
+          <p class="md:w-10/12 md:ml-[5.5rem] text-left my-6">
+            Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
+          </p>
         </div>
-        <div class="flex items-start gap-4 mt-8">
-          <p class="bg-orange-600 px-6 py-1 rounded-full text-white">03</p>
-          <div>
-            <p class="font-bold mb-4">Everything you need in one place</p>
-            <p class="w-10/12">
-              Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
-            </p>
+
+        <div>
+          <div class="flex items-center bg-orange-100 md:bg-white rounded-l-full gap-5">
+            <p class="bg-orange-600 px-6 py-1 rounded-full text-white">03</p>
+            <p class="font-bold">Everything you need in one place</p>
           </div>
-        </div>  
+          <p class="md:w-10/12 md:ml-[5.5rem] text-left my-6">
+            Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
+          </p>
+        </div>
       </div>
     </section>
-
-    <section>
-      <h2>What they’ve said</h2>
-      <div>
-        <div>
-          <img src="./images/avatar-anisha.png" alt="profile">
-          <p>Anisha Li</p>
+    <!-- transform translateX(-200px) -->
+    <section class="max-w-6xl m-auto text-center mt-28">
+      <h2 class="text-4xl font-bold mb-8 text-center">What they’ve said</h2>
+      <div class="flex gap-6 overflow-x-hidden pt-12">
+        <div class="bg-gray-400 text-center relative w-96 p-9 flex-none">
+          <img src="./images/avatar-anisha.png" class="absolute bottom-full right-1/2 translate-x-1/2 translate-y-1/2 w-20" alt="profile">
+          <p class="mt-6 mb-4 font-bold">Anisha Li</p>
           <p>“Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
         </div>
-        <div>
-          <img src="./images/avatar-anisha.png" alt="profile">
-          <p>Ali Bravo</p>
+        <div class="bg-gray-400 text-center relative w-96 p-9 flex-none">
+          <img src="./images/avatar-ali.png" class="absolute bottom-full right-1/2 translate-x-1/2 translate-y-1/2 w-20" alt="profile">
+          <p class="mt-6 mb-4 font-bold">Ali Bravo</p>
           <p>“We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much more focused.”</p>
         </div>
-        <div>
-          <img src="./images/avatar-anisha.png" alt="profile">
-          <p>Anisha Li</p>
-          <p>“Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
-        </div>
-        <div>
-          <img src="./images/avatar-ali.png" alt="profile">
-          <p>Richard Watts</p>
+        <div class="bg-gray-400 text-center relative w-96 p-9 flex-none">
+          <img src="./images/avatar-richard.png" class="absolute bottom-full right-1/2 translate-x-1/2 translate-y-1/2 w-20" alt="profile">
+          <p class="mt-6 mb-4 font-bold">Richard Watts</p>
           <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk to!”</p>
         </div>
-        <div>
-          <img src="./images/avatar-ali.png" alt="profile">
-          <p>Shanai Gough</p>
+        <div class="bg-gray-400 text-center relative w-96 p-9 flex-none">
+          <img src="./images/avatar-shanai.png" class="absolute bottom-full right-1/2 translate-x-1/2 translate-y-1/2 w-20" alt="profile">
+          <p class="mt-6 mb-4 font-bold">Shanai Gough</p>
           <p>“Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being intrusive.”</p>
         </div>
       </div>
-      <button class="bg-orange-600 py-3 px-8 rounded-full mt-8 font-bold text-white">Get Started</button>
+      <button class="bg-orange-600 py-3 px-8 rounded-full mt-12 font-bold text-white">Get Started</button>
     </section>
-    <section class="bg-orange-600 py-12">
-      <div class="max-w-6xl m-auto grid grid-cols-2">
-        <h2 class="text-4xl font-bold text-white w-9/12">Simplify how your team works today.</h2>
-        <button class=" bg-white py-3 px-8 rounded-full mt-8 font-bold justify-self-end">Get Started</button>
+
+    <section class="bg-orange-600 py-12 mt-32">
+      <div class="max-w-6xl m-auto md:grid md:grid-cols-2">
+        <h2 class="text-4xl font-bold text-white m-auto w-9/12">Simplify how your team works today.</h2>
+        <button class=" bg-white py-3 px-8 rounded-full mt-8 font-bold justify-self-end md:justify-self-center">Get Started</button>
       </div>
     </section>
   </main>
@@ -144,12 +143,12 @@
       <div class="flex flex-col justify-between">
         <form method="post" class="flex items-center gap-4">
           <div class="relative">
-            <input type="email" name="email" id="email" class="py-2 pl-4 rounded-full text-black" placeholder="Updates in your inbox…">
-            <small class="absolute top-full left-6 mt-4">Please insert a valid email</small>
+            <input type="email" name="email" id="email" class="py-2 pl-4 rounded-full text-black placeholder:text-xs" placeholder="Updates in your inbox…">
+            <small class="absolute top-full left-6 mt-2 text-red-600">Please insert a valid email</small>
           </div>
           <input type="submit" value="Go" class="py-2 px-5 bg-orange-600 text-white rounded-full">
         </form>
-        <p class="text-right">Copyright 2020. All Rights Reserved</p>
+        <p class="text-right opacity-60 text-xs">Copyright 2020. All Rights Reserved</p>
       </div>
     </div>
   </footer>
