--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 </head>
 <body class="overflow-x-hidden">
   <header class="max-w-6xl m-auto px-4">
-    <nav class="flex items-center justify-between pt-6">
+    <nav class="flex items-center justify-between pt-6 relative nav">
       <img src="./images/logo.svg" alt="logo">
-      <ul class="gap-4 hidden md:flex">
+      <ul class="gap-4 absolute top-20 left-0 right-0 bg-white z-10 p-8 text-center flex-col hidden shadow-lg md:relative md:flex md:flex-row md:top-0 md:bg-transparent md:shadow-none">
         <li class="hover:opacity-60 cursor-pointer"><a href="/">Pricing</a></li>
         <li class="hover:opacity-60 cursor-pointer"><a href="/">Product</a></li>
         <li class="hover:opacity-60 cursor-pointer"><a href="/">About Us</a></li>
@@ -21,7 +21,8 @@
         <li class="hover:opacity-60 cursor-pointer"><a href="/">Community</a></li>
       </ul>
       <button class="bg-orange-600 py-3 px-8 rounded-full font-bold text-white hidden md:block hover:shadow-lg hover:shadow-orange-700 hover:opacity-90">Get Started</button>
-      <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="md:hidden">
+      <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="md:hidden cursor-pointer" id="hamburger-icon">
+      <img src="./images/icon-close.svg" alt="close icon" class="hidden cursor-pointer" id="close-icon">
     </nav>
   </header>
   
@@ -153,5 +154,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
